--- a/views/partials/home/home-nav.handlebars
+++ b/views/partials/home/home-nav.handlebars
@@ -22,7 +22,7 @@
               <a class="nav-link" href="/register">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="/admin">Admin</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
