--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -3,26 +3,28 @@
         <div class="col-12">
             <h1>Edit Post</h1>
 
-            <form action="/admin/posts/edit" method="post">
+            <form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post">
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
+                    <input type="text" class="form-control" id="title" name="title" value="{{post.title}}">
                 </div>
                 <div class="form-group">
                     <label for="status">Status</label>
                     <select name="status" id="status" class="form-control">
-                        <option value="public">Public</option>
+                        {{#select post.status}}
+                        <option value="public" >Public</option>
                         <option value="private">Private</option>
                         <option value="draft">Draft</option>
+                        {{/select}}
                     </select>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input">
+                    <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input" {{#if post.allowComments}} checked {{/if}}>
                     <label for="allowComments" class="form-check-label">Allow Comments</label>
                 </div>
                 <div class="form-group">
                     <label for="body">Body</label>
-                    <textarea class="form-control" id="body" rows="3" name="body"></textarea>
+                    <textarea class="form-control" id="body" rows="3" name="body">{{post.body}}</textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
