--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -3,10 +3,15 @@
         <div class="col-12">
             <h1>Create Post</h1>
 
-            <form action="/admin/posts/create" method="post">
+            <form action="/admin/posts/create" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
+                </div>
+                <div class="form-group">
+                  <label for="file">File</label>
+                  <input type="file" name="file" id="" class="form-control-file" placeholder="" aria-describedby="helpId">
+                  <small id="helpId" class="text-muted">Upload a file</small>
                 </div>
                 <div class="form-group">
                     <label for="status">Status</label>
