--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -7,6 +7,7 @@
                 <thead>
                     <tr>
                         <th>Id</th>
+                        <th>Imagen</th>
                         <th>Title</th>
                         <th>Status</th>
                         <th>Allow Comments</th>
@@ -17,11 +18,12 @@
                     {{#each posts}}
                     <tr>
                         <td scope="row">{{id}}</td>
+                        <td><img src="/uploads/{{file}}" alt="{{file}}" height="50px"></td>
                         <td>{{title}}</td>
                         <td>{{status}}</td>
                         <td>{{allowComments}}</td>
                         <td><a href="/admin/posts/edit/{{id}}" class="btn btn-info"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a></td>
-                        <td><a href="/admin/posts/delete/{{id}}?_method=DELETE" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a></td>
+                        <td><form action="/admin/posts/delete/{{id}}?_method=DELETE" method="POST"><button class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> Delete</button></form></td>
                     </tr>
                     {{/each}}
                 </tbody>
