--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -3,14 +3,20 @@
         <div class="col-12">
             <h1>Create Post</h1>
 
+            {{#each errors}}
+                <div class="alert alert-danger" role="alert">
+                    <strong>{{message}}</strong>
+                </div>                
+            {{/each}}
+
             <form action="/admin/posts/create" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">Title</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
+                    <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title" >
                 </div>
                 <div class="form-group">
                   <label for="file">File</label>
-                  <input type="file" name="file" id="" class="form-control-file" placeholder="" aria-describedby="helpId">
+                  <input type="file" name="file" id="" class="form-control-file" placeholder="" aria-describedby="helpId" >
                   <small id="helpId" class="text-muted">Upload a file</small>
                 </div>
                 <div class="form-group">
@@ -22,14 +28,14 @@
                     </select>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input">
+                    <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input" >
                     <label for="allowComments" class="form-check-label">Allow Comments</label>
                 </div>
                 <div class="form-group">
                     <label for="body">Body</label>
-                    <textarea class="form-control" id="body" rows="3" name="body"></textarea>
+                    <textarea class="form-control" id="body" rows="3" name="body" ></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Create Post</button>
             </form>
         </div>
     </div>    
