--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -3,10 +3,15 @@
         <div class="col-12">
             <h1>Edit Post</h1>
 
-            <form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post">
+            <form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title" name="title" value="{{post.title}}">
+                </div>
+                <div class="form-group">
+                  <label for="file">File</label>
+                  <input type="file" name="file" id="" class="form-control-file" placeholder="" aria-describedby="helpId" >
+                  <small id="helpId" class="text-muted">Upload a file</small>
                 </div>
                 <div class="form-group">
                     <label for="status">Status</label>
@@ -26,7 +31,7 @@
                     <label for="body">Body</label>
                     <textarea class="form-control" id="body" rows="3" name="body">{{post.body}}</textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Update Post</button>
             </form>
         </div>
     </div>    
