--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="col-12">
             <h1>ALL POSTS</h1>
-
             <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Id</th>
+                        <th>Date</th>
                         <th>Imagen</th>
                         <th>Title</th>
                         <th>Status</th>
@@ -18,6 +18,7 @@
                     {{#each posts}}
                     <tr>
                         <td scope="row">{{id}}</td>
+                        <td>{{generateTime date 'MMMM Do YYYY'}}</td>
                         <td><img src="/uploads/{{file}}" alt="{{file}}" height="50px"></td>
                         <td>{{title}}</td>
                         <td>{{status}}</td>
