--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -142,7 +142,7 @@
         </li>
         <li class="breadcrumb-item active">My Dashboard</li>
       </ol>
-      
+      {{> home/form-msgs}}
       {{{body}}}
 
     </div>
