--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -18,7 +18,7 @@
                     {{#each posts}}
                     <tr>
                         <td scope="row">{{id}}</td>
-                        <td>{{generateTime date 'MMMM Do YYYY'}}</td>
+                        <td>{{generateDate date 'MMMM D YYYY'}}</td>
                         <td><img src="/uploads/{{file}}" alt="{{file}}" height="50px"></td>
                         <td>{{title}}</td>
                         <td>{{status}}</td>
