--- a/views/partials/admin/admin-side-nav.handlebars
+++ b/views/partials/admin/admin-side-nav.handlebars
@@ -32,16 +32,19 @@
             <li>
               <a href="/admin/posts/edit">Edit Post</a>
             </li>
+            <li>
+              <a href="/admin/posts/edit">Posts</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
             <i class="fa fa-fw fa-file"></i>
-            <span class="nav-link-text">Example Pages</span>
+            <span class="nav-link-text">Categories</span>
           </a>
           <ul class="sidenav-second-level collapse" id="collapseExamplePages">
             <li>
-              <a href="login.html">Login Page</a>
+              <a href="/admin/categories">All Categories</a>
             </li>
             <li>
               <a href="register.html">Registration Page</a>
