--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -27,6 +27,14 @@
                         <option value="draft">Draft</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="status">Category</label>
+                    <select name="category" id="category" class="form-control">
+                        {{#each categories}}
+                        <option value="{{id}}">{{name}}</option>
+                        {{/each}}
+                    </select>
+                </div>
                 <div class="form-check">
                     <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input" >
                     <label for="allowComments" class="form-check-label">Allow Comments</label>
