--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -23,6 +23,16 @@
                         {{/select}}
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="status">Categories</label>
+                    <select name="category" id="category" class="form-control">
+                        {{#select post.category}}
+                        {{#each categories}}
+                            <option value="{{id}}">{{name}}</option>
+                        {{/each}}
+                        {{/select}}
+                    </select>
+                </div>
                 <div class="form-check">
                     <input type="checkbox" name="allowComments" id="allowComments" class="form-check-input" {{#if post.allowComments}} checked {{/if}}>
                     <label for="allowComments" class="form-check-label">Allow Comments</label>
