--- a/views/partials/home/form-msgs.handlebars
+++ b/views/partials/home/form-msgs.handlebars
@@ -7,3 +7,12 @@
         {{success_message}}
     </div>
 {{/if}}
+{{#if error_message}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Close</span>
+        </button>
+        {{error_message}}
+    </div>
+{{/if}}
