--- a/views/home/register.handlebars
+++ b/views/home/register.handlebars
@@ -6,27 +6,27 @@
                 <div class="form-row">
                     <div class="col-md-6">
                         <label for="exampleInputName">First name</label>
-                        <input name="firstName" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name">
+                        <input name="firstName" value="{{firstName}}" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name" required>
                     </div>
                     <div class="col-md-6">
                         <label for="exampleInputLastName">Last name</label>
-                        <input name="lastName" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name">
+                        <input name="lastName" value="{{lastName}}" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name" required>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input name="email" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+                <input name="email" value="{{email}}" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <div class="form-group">
                 <div class="form-row">
                     <div class="col-md-6">
                         <label for="exampleInputPassword1">Password</label>
-                        <input name="password" class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+                        <input name="password" class="form-control" id="exampleInputPassword1" type="password" placeholder="Password" required>
                     </div>
                     <div class="col-md-6">
                         <label for="exampleConfirmPassword">Confirm password</label>
-                        <input name="passwordConfirm" class="form-control" id="exampleConfirmPassword" type="password" placeholder="Confirm password">
+                        <input name="passwordConfirm" class="form-control" id="exampleConfirmPassword" type="password" placeholder="Confirm password" required>
                     </div>
                 </div>
             </div>
