--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -29,7 +29,18 @@
 
     <!-- Page Content -->
     <div class="container">
-
+      {{#if errors}}
+        {{#each errors}}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              <span class="sr-only">Close</span>
+            </button>
+            {{message}}
+          </div>
+        {{/each}}
+      {{/if}}
+      {{>home/form-msgs}}
       {{{body}}}
 
     </div>
