--- a/views/home/post.handlebars
+++ b/views/home/post.handlebars
@@ -33,10 +33,11 @@
           <div class="card my-4">
             <h5 class="card-header">Leave a Comment:</h5>
             <div class="card-body">
-              <form>
+              <form action="/admin/comments" method="POST">
                 <div class="form-group">
-                  <textarea class="form-control" rows="3"></textarea>
+                  <textarea name="body" class="form-control" rows="3"></textarea>
                 </div>
+                <input type="hidden" name="id" value="{{post.id}}">
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
             </div>
