Show comments in front end

--- a/views/home/post.handlebars
+++ b/views/home/post.handlebars
@@ -29,6 +29,8 @@
 
           <hr>
 
+          {{#if post.allowComments}}
+          {{#if user}}
           <!-- Comments Form -->
           <div class="card my-4">
             <h5 class="card-header">Leave a Comment:</h5>
@@ -42,17 +44,38 @@
               </form>
             </div>
           </div>
+          {{else}}
+          <div class="card my-4">
+            <h5 class="card-header"><a href="/login">Login</a> to comment</h5>
+            <div class="card-body">
+            </div>
+          </div>
+          {{/if}}
+          {{else}}
+          <div class="card my-4">
+            <h5 class="card-header">Comments not allowed</h5>
+            <div class="card-body">
+            </div>
+          </div>
+          {{/if}}
 
+          {{#if post.comments}}
+          {{#each post.comments}}
           <!-- Single Comment -->
           <div class="media mb-4">
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
             <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              <h5 class="mt-0">{{user.firstName}} {{user.lastName}}</h5>
+              {{body}}
             </div>
           </div>
-
-          <!-- Comment with nested comments -->
+          {{/each}}
+          {{else}}
+          <div class="media mb-4">
+            <h3>Nobody has commented yet.</h3>
+          </div>
+          {{/if}}
+          <!-- Comment with nested comments 
           <div class="media mb-4">
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
             <div class="media-body">
@@ -76,7 +99,7 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
 
         </div>
 
