--- a/views/partials/admin/admin-side-nav.handlebars
+++ b/views/partials/admin/admin-side-nav.handlebars
@@ -30,10 +30,7 @@
               <a href="/admin/posts/create">Create Post</a>
             </li>
             <li>
-              <a href="/admin/posts/edit">Edit Post</a>
-            </li>
-            <li>
-              <a href="/admin/posts/edit">Posts</a>
+              <a href="/admin/posts/my-posts">My Posts</a>
             </li>
           </ul>
         </li>
